updated javadoc commenting, added unit test