@@ -2,11 +2,11 @@ package com.example.brickpaint;
 
 import javafx.fxml.FXML;
 import javafx.scene.control.TextArea;
+import org.apache.commons.io.IOUtils;
 
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.io.*;
+import java.nio.charset.StandardCharsets;
+import java.util.Objects;
 
 /**
  * Controller class for the About Program Popup Window
@@ -15,10 +15,6 @@ import java.nio.file.Paths;
  */
 public class AboutBrickController {
 
-    /**
-     * The text file from which the text displayed in the about window is populated
-     */
-    private final String fileURL = "C:/Users/matde/Documents/Java Projects/CS250/BrickPaint/ReleaseNotes.txt";
     /**
      * The text within the About window
      */
@@ -29,12 +25,13 @@ public class AboutBrickController {
      * Sets the text of the about window to the text supplied from the class's designated file
      */
     public void Setup() {
-        Path path = Paths.get(fileURL);
+        String str = "";
+        InputStream in = Objects.requireNonNull(BrickPaintApp.class.getResourceAsStream("ReleaseNotes.txt"));
         try {
-            String text = Files.readString(path);
-            textArea.setText(text);
+            str = IOUtils.toString(in, StandardCharsets.UTF_8);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
+        textArea.setText(str);
     }
 }
